# INITpy

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .zensical.toml  CHANGELOG.md  Dockerfile  Makefile  README.md  default.nix  docker-compose.yml  lefthook.yml  package.env  pyproject.toml  tox.ini
.devcontainer/: dev.Dockerfile  dev.docker-compose.yml  devcontainer.json
.github/workflows/: docs.yml  main.yml  mkdocs.yml  new_tag.yml
configs/: REUSE.toml
configs/dev/: flake8.ini  mkdocs.yml  mypy.ini  requirements.dev.txt  requirements.docs.txt  requirements.test.txt
configs/docker/: dev.Dockerfile  dev.Dockerfile.license
configs/docs/: mkdocs.yml
configs/lint/:  shellcheckrc  shellcheckrc  shellcheckrc.license  whitelist.py
configs/prompt/: command.md  commit.md
configs/requirements/dev/: requirements.txt
configs/requirements/docs/: requirements.txt
configs/requirements/test/: requirements.txt
docs/: about.md  index.md
docs/ref/: ref_m.md
src/initpy/: main.py
src/initpy/sub/: sub.py
