# SPDX-FileCopyrightText: 2026 Artur Lissin
#
# SPDX-License-Identifier: CC0-1.0

[project]
classifiers = ["Private :: Do Not Upload"]
name = "initpy"
version = "0.8.1"
description = """Initial bare-bone monorepo Python project."""
readme = "README.md"
authors = [{ name = "Artur Lissin", email = "artdotlis@pm.me" }]
license = "Unlicense"
keywords = ["python", "skeleton"]
requires-python = ">=3.13,<4"

[tool.uv]
exclude-newer = "3 days"
package = false
default-groups = ["mono"]

[tool.setuptools]
py-modules = []

[tool.uv.sources]
pkg1 = { workspace = true }
shared_utils = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = [
  "packages/docs"
]

[dependency-groups]
mono = [
  # local
  "shared_utils",
  "pkg1",
]
dev = [
  "commitizen ==4.16.4",
  "pyrefly ==1.1.1",
  "ruff ==0.15.20",
  "codespell ==2.4.2",
  "shellcheck-py ==0.11.0.1",
  "pre-commit-hooks ==6.0.0",
  "vulture ==2.16",
  # license
  "reuse ==6.2.0",
  # commit hooks
  "lefthook ==2.1.9",
  # types
]
test = ["coverage ==7.14.3", "pytest ==9.1.1", "tox ==4.56.1"]
docs = [
  "zensical ==0.0.46",
  "mkdocstrings-python ==2.0.5",
]

[tool.codespell]
count = ''
ignore-words = "configs/lint/ignore.txt"
quiet-level = 3
skip = '.vscore,.tox,*~,*.cache,*.lock,venv,*ignore.txt'

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "README.md:^\\[!\\[release:",
  "packages/pkg1/pyproject.toml",
  "packages/shared_utils/pyproject.toml",
  "packages/docs/package.json",
]
version_provider = "uv"
version_type = "semver"

[tool.pyrefly]
preset = "strict"
project-includes = [
  "packages/**/*.py",
]

project-excludes = [
  "**/__pycache__/**",
  "**/.tox/**",
  "**/.venv/**",
  "**/build/**",
  "**/dist/**",
  "configs/**",
]
search-path = [
  "packages/pkg1/src",
  "packages/shared_utils/src",
]
python-version = "3.13"
python-platform = "linux"
skip-interpreter-query = false
check-unannotated-defs = true
infer-return-types = "checked"

[tool.pyrefly.errors]
bad-return = true
bad-assignment = true
implicit-any = true
unsupported-operation = true
unused-ignore = true

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = [
  ".git",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pypackages__",
  "__pycache__",
  "build",
  "dist",
  "venv",
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
ignore = [
  "TRY003",
  "N818",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
]
select = ["E", "F", "B", "C90", "S", "PT", "ARG", "PTH", "TRY", "RUF", "N", "D"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.54"]

[tool.tox.env_run_base]
allowlist_externals = ["coverage"]
set_env = { PYTHONPATH = "packages/pkg1/src:packages/shared_utils/src" }
commands = [
  ["coverage", "erase"],
  #  [
  #    "coverage",
  #    "run",
  #    "--parallel-mode",
  #    "-m",
  #    "pytest",
  #    "{posargs}",
  #  ],
  #  [
  #    "coverage",
  #    "combine",
  #  ],
  #  [
  #    "coverage",
  #    "report",
  #  ],
]

[tool.coverage.run]
source = ["packages/pkg1/src/pkg1", "packages/shared_utils/src/shared_utils"]
parallel = true

[tool.coverage.report]
show_missing = false
fail_under = 30

[tool.vulture]
paths = ["configs/lint/whitelist.py", "packages"]
exclude = ["packages/docs/"]
ignore_decorators = ["@*"]
ignore_names = ["model_config", "formatwarning"]
make_whitelist = true
min_confidence = 60
sort_by_size = true
verbose = false
